refactor: introduces src, templates and static directories

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-API_KEY=
-PROFILE_UUID=
+# Hypixel API Key
+HYPIXEL_API_KEY=
 
+# Co-op profile UUID
+PROFILE_UUID=
+# The UUID of one member of the co-op to detect bank upgrade based on achievements
+MEMBER_UUID=
