--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,15 @@ reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 url = "2"
+
+[lints]
+[lints.rust]
+unsafe_code = "deny"
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+# cargo = { level = "warn", priority = -1 }
+
+redundant_pub_crate = "allow"
+missing_const_for_fn = "allow"
+dbg_macro = "warn"
